Revise README for clarity and feature updates
Updated the README to enhance clarity and added new features section with status. Included demo video link and improved formatting for better presentation.