@@ -1,125 +1,178 @@
-# Electricity Bill Management System
+# ⚡ Electricity Bill Management System
 
-The **Electricity Bill Management System** is a JavaFX-based application designed to simplify and automate electricity billing operations. It allows users to generate bills using consumer details and meter readings, apply dynamic discounts, fines for late payments, and adjustable tax rates, and update the payment status of each bill. 
+A **JavaFX-based desktop application** that automates electricity billing operations — from bill generation and discount management to payment tracking and revenue analysis.
 
-All billing data is stored in a structured file, making it lightweight and easy to manage. The system includes separate Java classes such as `Payment`, `Discount`, and `Fine`, each following Object-Oriented Programming (OOP) principles to ensure modularity and maintainability. The user interface is built with JavaFX components like ComboBoxes, TextFields, and Buttons, providing an intuitive and interactive experience for managing billing records and viewing revenue updates efficiently.
+---
 
-## Features
+## 📽️ Demo Video
 
-* **Bill Generation:** Create bills using user CNIC, name, address, category, and meter readings.
-* **Dynamic Calculations:** Application of discounts, fines (for late payments), and customizable tax rates.
-* **Payment Tracking:** Status update functionality with real-time revenue calculation.
-* **Responsive UI:** JavaFX-based interface with intuitive controls.
-* **OOP Design:** Modular structure with separate classes (`Payment`, `Discount`, `Fine`) for clean logic separation.
-* **Scalability:** Maintainable codebase suitable for academic or lightweight commercial use.
+> Watch the full project walkthrough:
 
-## Screenshots
+**[▶ Click here to watch the demo](YOUR_YOUTUBE_LINK_HERE)**
 
-### Main Menu
-<img src="src/screenshots/mainmenu.png" width="700" alt="Main Menu">
+---
 
-### Discount
-<img src="src/screenshots/applydiscount.png" width="700" alt="Apply Discount">
+## 📥 Download
 
-### Fine
-<img src="src/screenshots/fine.png" width="700" alt="Apply Fine">
+### Windows Executable (No Installation Required)
 
-### Pay Bill
-<img src="src/screenshots/paybill.png" width="700" alt="Pay Bill">
+Download the latest packaged Windows application directly — no Java or Maven installation needed:
 
-### Revenue
-<img src="src/screenshots/revenue.png" width="700" alt="Revenue">
+**[⬇ Download Latest Release](https://github.com/najmularifeen786/ElectrictyBillManagementSystem/releases)**
 
-### Update Taxes
-<img src="src/screenshots/taxes.png" width="700" alt="Update Taxes">
+### Quick Start
 
-### Generate Bill
-<img src="src/screenshots/generatebill.png" width="420" alt="Generate Bill">
+1. Download the latest `.zip` release.
+2. Extract the archive to any folder.
+3. Make sure `billsdata.txt` is in the **same folder** as `ElectricityBillManagementSystem.exe`.
+4. Double-click `ElectricityBillManagementSystem.exe` to launch.
 
-<br>
+> **Note:** The executable is self-contained. No Java installation is required.
 
-## Project Structure
+---
 
-```text
-ElectrictyBillManagementSystem/             (This is your main project root)
-    ├── .idea/                              (Module-specific IntelliJ configuration)
-    ├── src/                                (Source code folder)
-    │   ├── main/                           (Main source code and resources)
-    │   │   ├── java/
-    │   │   │   └── com/
-    │   │   │       └── example/
-    │   │   │           └── demo4/
-    │   │   │               ├── ApplyDiscountController.java
-    │   │   │               ├── ApplyLateFineController.java
-    │   │   │               ├── CallGenerateBill.java
-    │   │   │               ├── Category.java
-    │   │   │               ├── Discount.java
-    │   │   │               ├── ElectricityBillSystem.java
-    │   │   │               ├── Fine.java
-    │   │   │               ├── GenerateBill.java
-    │   │   │               ├── GenerateBillController.java
-    │   │   │               ├── HelloApplication.java
-    │   │   │               ├── HelloController.java
-    │   │   │               ├── PayBillController.java
-    │   │   │               ├── Payment.java
-    │   │   │               ├── RevenueStatisticsController.java
-    │   │   │               ├── Taxes.java
-    │   │   │               └── TaxesController.java
-    │   │   └── module-info.java
-    │   │
-    │   └── resources/                      (FXML and other resources)
-    │
-    ├── screenshots/                        (Screenshots folder)
-    ├── Readme.md                           (Your main Readme file)
-    ├── .gitignore                          (Git ignore file)
-    ├── mvnw                                (Maven Wrapper script for Linux/macOS)
-    ├── mvnw.cmd                            (Maven Wrapper script for Windows)
-    └── pom.xml                             (Maven Project Object Model file)
-```
-## Technologies Used
-- **Language:** Java 17
+## ✨ Features
+
+| Feature | Status |
+|---|---|
+| Bill Generation (CNIC, name, address, category, meter readings) | ✅ Available |
+| Dynamic Discounts | ✅ Available |
+| Customizable Tax Rates | ✅ Available |
+| Bill Payment Processing & Status Tracking | ✅ Available |
+| Bill Search | ✅ Available |
+| File-Based Data Storage (`billsdata.txt`) | ✅ Available |
+| Apply Late Payment Fine | 🔧 Coming Soon |
+| Overall Revenue Statistics | 🔧 Coming Soon |
+
+> **Note on Coming Soon features:** The *Apply Late Payment Fine* and *Overall Revenue Statistics* modules are functional when the project is compiled and run from source locally. Packaging support for these features in the Windows executable is currently in progress.
+
+---
+
+## 📸 Screenshots
+
+<table>
+  <tr>
+    <td align="center"><strong>Main Menu</strong><br><img src="src/screenshots/mainmenu.png" width="340"></td>
+    <td align="center"><strong>Generate Bill</strong><br><img src="src/screenshots/generatebill.png" width="340"></td>
+  </tr>
+  <tr>
+    <td align="center"><strong>Apply Discount</strong><br><img src="src/screenshots/applydiscount.png" width="340"></td>
+    <td align="center"><strong>Pay Bill</strong><br><img src="src/screenshots/paybill.png" width="340"></td>
+  </tr>
+  <tr>
+    <td align="center"><strong>Update Taxes</strong><br><img src="src/screenshots/taxes.png" width="340"></td>
+    <td align="center"><strong>Apply Late Fine</strong><br><img src="src/screenshots/fine.png" width="340"></td>
+  </tr>
+  <tr>
+    <td align="center" colspan="2"><strong>Revenue Statistics</strong><br><img src="src/screenshots/revenue.png" width="500"></td>
+  </tr>
+</table>
+
+---
+
+## 🛠️ Technologies Used
+
+- **Language:** Java 23
 - **Framework:** JavaFX
 - **Styling:** JavaFX CSS
 - **Build Tool:** Maven
+- **Data Storage:** File-based (`billsdata.txt`)
 - **OOP Concepts:** Encapsulation, Association, Inheritance, Enumeration
 
-## Running the Project
+---
+
+## 🚀 Running from Source
+
+> Only needed if you want to explore or modify the code. For regular use, download the executable above.
 
 ### Requirements
-- Java JDK installed (version 17 or higher recommended)
-- JavaFX library set up in your environment
 
-### Steps to Run
+- Java JDK 23 or later
+- Maven
 
-1. **Open a terminal and navigate to the project folder**
+### Steps
+
+1. **Clone the repository**
    ```bash
-   cd path/to/project/src/main/java/com/example/demo4/
+   git clone https://github.com/najmularifeen786/ElectrictyBillManagementSystem.git
+   cd ElectrictyBillManagementSystem
    ```
- 2. **Compile the application**
 
-> **Note:** Replace `/path/to/javafx/lib` with the actual path where JavaFX is installed on your machine.
+2. **Build and run**
+   ```bash
+   mvn clean javafx:run
+   ```
 
-```bash
-javac --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml HelloApplication.java
+> All features, including *Apply Late Payment Fine* and *Revenue Statistics*, are fully functional when running from source.
+
+---
+
+## 📦 Project Structure
+
 ```
- 3. **Run the application**
-
-```bash 
-
-java --module-path /path/to/javafx/lib --add-modules javafx.controls,javafx.fxml HelloApplication
+ElectrictyBillManagementSystem/
+├── src/
+│   ├── main/
+│   │   ├── java/com/example/demo4/
+│   │   │   ├── ApplyDiscountController.java
+│   │   │   ├── ApplyLateFineController.java
+│   │   │   ├── CallGenerateBill.java
+│   │   │   ├── Category.java
+│   │   │   ├── Discount.java
+│   │   │   ├── ElectricityBillSystem.java
+│   │   │   ├── Fine.java
+│   │   │   ├── GenerateBill.java
+│   │   │   ├── GenerateBillController.java
+│   │   │   ├── HelloApplication.java
+│   │   │   ├── HelloController.java
+│   │   │   ├── PayBillController.java
+│   │   │   ├── Payment.java
+│   │   │   ├── RevenueStatisticsController.java
+│   │   │   ├── Taxes.java
+│   │   │   └── TaxesController.java
+│   │   └── module-info.java
+│   └── resources/               # FXML files and UI resources
+├── screenshots/
+├── pom.xml
+├── mvnw
+├── mvnw.cmd
+└── README.md
 ```
 
-## Contributing
-I welcome contributions to enhance the Electricity Bill Management System. Here's how you can help:
+---
+
+## 📋 Release Information
+
+### Version 1.0
+
+- ✅ Bill Generation
+- ✅ Bill Search
+- ✅ Bill Payment Processing
+- ✅ Discount Management
+- ✅ Tax Management
+- ✅ JavaFX Desktop Interface
+- ✅ File-Based Data Storage
+- ✅ Windows Executable Distribution
+- 🔧 Late Payment Fine *(coming in next release)*
+- 🔧 Revenue Statistics *(coming in next release)*
+
+---
+
+## 🤝 Contributing
+
+Contributions are welcome! Here's how to get started:
 
 1. Fork the repository.
-2. Create a new branch (`git checkout -b feature/your-feature`).
-3. Make your changes and commit them (`git commit -m "Add your message"`).
-4. Push to the branch (`git push origin feature/your-feature`).
-5. Open a Pull Request with a description of your changes.
+2. Create a new branch: `git checkout -b feature/your-feature`
+3. Commit your changes: `git commit -m "Add your message"`
+4. Push to the branch: `git push origin feature/your-feature`
+5. Open a Pull Request with a clear description of your changes.
 
-Please ensure your code follows the existing style.
+Please ensure your code follows the existing style and structure.
 
-## Contact
+---
+
+## 📬 Contact
+
 - **Author:** Najmul Arifeen
-- **GitHub:** [https://github.com/najmularifeen786](https://github.com/najmularifeen786)
+- **GitHub:** [github.com/najmularifeen786](https://github.com/najmularifeen786)
